assets.quells.net

--- a/DP/proj/cambodia_timeline.html
+++ b/DP/proj/cambodia_timeline.html
@@ -25,7 +25,7 @@
 		<section class="double perm">
 			<h2>Cambodia Timeline</h2>
 			<br/>
-			<a href="http://cdn.quells.net/DP/proj/cambodia.pdf" target="_blank"><img src="http://cdn.quells.net/DP/proj/cambodia_double.jpg" width="630" height="408" alt="Cambodia Timeline" /></a>
+			<a href="http://assets.quells.net/DP/proj/cambodia.pdf" target="_blank"><img src="http://assets.quells.net/DP/proj/cambodia_double.jpg" width="630" height="408" alt="Cambodia Timeline" /></a>
 			<p>A collaboration with <a href="http://dp.hightechhigh.org/~snichols/" target="_blank">Sky Nichols</a>.</p>
 			<p>The history and science of environmental degradation in Cambodia compiled into an infographic.</p>
 			
