--- a/global/js/FancyZoom.html
+++ b/global/js/FancyZoom.html
@@ -14,8 +14,8 @@
 	
 	<body id="index" onload="setupZoom()">
 		
-		<a href="http://quells.net/pictures/pizza/pepperoni.jpg" title="You can have a caption, too.">
-			<img src="http://quells.net/pictures/pizza/pepperoni-thumb.jpg">
+		<a href="http://assets.quells.net/pictures/pizza/pepperoni.jpg" title="You can have a caption, too.">
+			<img src="http://assets.quells.net/pictures/pizza/pepperoni-thumb.jpg">
 		</a>
 		
 	</body>
