--- a/homer/index.html
+++ b/homer/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="sleeve">
-      <img id="logo" src="http://cdn.quells.net/homer/delawie_logo.png" alt="delawie logo" width="407" height="77">
+      <img id="logo" src="http://assets.quells.net/homer/delawie_logo.png" alt="delawie logo" width="407" height="77">
       <h1>
         intranet
       </h1>
@@ -284,7 +284,7 @@
             </ul>
           </li>
         </ul>
-      </nav><img src="http://cdn.quells.net/homer/ADWRB.jpg" alt="Old Office" style="margin: 24px 0;" width="960" height="580">
+      </nav><img src="http://assets.quells.net/homer/ADWRB.jpg" alt="Old Office" style="margin: 24px 0;" width="960" height="580">
     </div>
   </body>
 </html>
