--- a/DP/proj/chem.html
+++ b/DP/proj/chem.html
@@ -25,10 +25,10 @@
 		<section class="double">
 			<h2>Chemistry Is Everywhere</h2>
 			<br/>
-			<a href="http://cdn.quells.net/DP/proj/arc.jpg" target="_blank"><img src="http://cdn.quells.net/DP/proj/arc_sq.jpg" width="310" height="310" alt="Homemade Arc Lamp" /></a>
-			<a href="http://cdn.quells.net/DP/proj/fluorescent.jpg" target="_blank"><img src="http://cdn.quells.net/DP/proj/fluorescent_sq.jpg" width="310" height="310" alt="Fluorescent Lamp" /></a>
-			<img src="http://cdn.quells.net/DP/proj/sunset_sq.jpg" width="310" height="310" alt="Sunset Photograph" />
-			<img src="http://cdn.quells.net/DP/proj/blank.png" width="310" height="310" alt="Spacer" />
+			<a href="http://assets.quells.net/DP/proj/arc.jpg" target="_blank"><img src="http://assets.quells.net/DP/proj/arc_sq.jpg" width="310" height="310" alt="Homemade Arc Lamp" /></a>
+			<a href="http://assets.quells.net/DP/proj/fluorescent.jpg" target="_blank"><img src="http://assets.quells.net/DP/proj/fluorescent_sq.jpg" width="310" height="310" alt="Fluorescent Lamp" /></a>
+			<img src="http://assets.quells.net/DP/proj/sunset_sq.jpg" width="310" height="310" alt="Sunset Photograph" />
+			<img src="http://assets.quells.net/DP/proj/blank.png" width="310" height="310" alt="Spacer" />
 		</section>
 		<section id="info">
 			<h2>Info</h2>
