--- a/DP/proj/transformation_lab.html
+++ b/DP/proj/transformation_lab.html
@@ -25,10 +25,10 @@
 		<section class="double">
 			<h2>Transformation Lab</h2>
 			<br/>
-			<a href="http://cdn.quells.net/DP/proj/transformation_lab.jpg" target="_blank"><img src="http://cdn.quells.net/DP/proj/transformation_lab_sq.jpg" width="310" height="310" alt="Transformation Lab" /></a>
-			<a href="http://cdn.quells.net/DP/proj/glowing_protein.jpg" target="_blank"><img src="http://cdn.quells.net/DP/proj/glowing_protein_sq.jpg" width="310" height="310" alt="Glowing Protein" /></a>
-			<a href="http://cdn.quells.net/DP/proj/pharma_team.jpg" target="_blank"><img src="http://cdn.quells.net/DP/proj/pharma_team_sq.jpg" width="310" height="310" alt="Pharmaceutical Team" /></a>
-			<a href="http://quells.net/pharma/index.html" target="_blank"><img src="http://cdn.quells.net/DP/proj/pharma_logo.jpg" width="310" height="310" alt="Pharma-Pl0x" /></a>
+			<a href="http://assets.quells.net/DP/proj/transformation_lab.jpg" target="_blank"><img src="http://assets.quells.net/DP/proj/transformation_lab_sq.jpg" width="310" height="310" alt="Transformation Lab" /></a>
+			<a href="http://assets.quells.net/DP/proj/glowing_protein.jpg" target="_blank"><img src="http://assets.quells.net/DP/proj/glowing_protein_sq.jpg" width="310" height="310" alt="Glowing Protein" /></a>
+			<a href="http://assets.quells.net/DP/proj/pharma_team.jpg" target="_blank"><img src="http://assets.quells.net/DP/proj/pharma_team_sq.jpg" width="310" height="310" alt="Pharmaceutical Team" /></a>
+			<a href="http://quells.net/pharma/index.html" target="_blank"><img src="http://assets.quells.net/DP/proj/pharma_logo.jpg" width="310" height="310" alt="Pharma-Pl0x" /></a>
 			<p>Clockwise from top-left: Checking our bacteria cultures for fluorescence indicating good transformation; the isolated protein fluoresces green under a blacklight; the logo for our humorous company website (click to visit); photo of our team checking out the bacteria cultures.</p>
 		</section>
 		<section class="info">
