--- a/DP/work.html
+++ b/DP/work.html
@@ -26,77 +26,77 @@
 		<h2 class="types"><a href="#" class="on" id="projbut">Projects</a> . <a href="#" id="artbut">Art</a> . <a href="#" id="allbut">All</a></h2>
 		<div class="push" id="secondpush"></div>
 		<section class="project">
-			<a href="http://quells.net/hue/"><img src="http://quells.net/hue/ScreenshotSquare.png" width="310" height="310" title="Screenshot from Hue.app" /></a>
+			<a href="http://quells.net/hue/"><img src="http://assets.quells.net/hue/ScreenshotSquare.png" width="310" height="310" title="Screenshot from Hue.app" /></a>
 			<h2>Hue Color Picker</h2>
 			<br/>
 			<p>A gesture based color selection tool for iPhone and iPod Touch. This is my first iOS app; you can <a href="http://itunes.apple.com/us/app/hue-color-picker/id542839604">find it on the App Store</a>.</p>
 		</section>
 		<section class="art">
-			<a href="http://cdn.quells.net/DP/proj/lonely_sunday.jpg"><img src="http://cdn.quells.net/DP/proj/lonely_sunday_sq.jpg" width="310" height="310" title="Lonely Sunday Painting" /></a>
+			<a href="http://assets.quells.net/DP/proj/lonely_sunday.jpg"><img src="http://assets.quells.net/DP/proj/lonely_sunday_sq.jpg" width="310" height="310" title="Lonely Sunday Painting" /></a>
 			<h2>Master to Master</h2>
 			<br/>
 			<p>Old subjects meet new styles in this art project. My painting combines Duccio di Buoninsegna&#39;s <em>Entry into Jerusalem</em> with Ed Ruscha&#39;s pop art style.</p>
 		</section>
 		<section class="art">
-			<a href="http://quells.deviantart.com/art/Andy-s-Room-with-the-TARDIS-264738306"><img src="http://cdn.quells.net/DP/proj/andyroom.png" width="310" height="310" title="Andy's Room" /></a>
+			<a href="http://quells.deviantart.com/art/Andy-s-Room-with-the-TARDIS-264738306"><img src="http://assets.quells.net/DP/proj/andyroom.png" width="310" height="310" title="Andy's Room" /></a>
 			<h2>Andy&rsquo;s Room with the TARDIS</h2>
 			<br/>
 			<p>What would happen if the <a href="http://en.wikipedia.org/wiki/Doctor_Who">Doctor</a> visited the set of Toy Story? An experiment with Cinema 4D.</p>
 		</section>
 		<section class="project">
-			<a href="proj/cambodia_timeline.html"><img src="http://cdn.quells.net/DP/proj/cambodia_sq.jpg" width="310" height="310" title="Cambodia Timeline" /></a>
+			<a href="proj/cambodia_timeline.html"><img src="http://assets.quells.net/DP/proj/cambodia_sq.jpg" width="310" height="310" title="Cambodia Timeline" /></a>
 			<h2>Cambodia Timeline</h2>
 			<br/>
 			<p>The history and science of environmental degradation in Cambodia compiled into an infographic. A collaboration with <a href="http://dp.hightechhigh.org/~snichols/" target="_blank">Sky Nichols</a>.</p>
 			<p>See more <a href="proj/cambodia_timeline.html">here</a>.</p>
 		</section>
 		<section class="project">
-			<a href="proj/transformation_lab.html"><img src="http://cdn.quells.net/DP/proj/transformation_lab_sq.jpg" width="310" height="310" title="Transformation Lab" /></a>
+			<a href="proj/transformation_lab.html"><img src="http://assets.quells.net/DP/proj/transformation_lab_sq.jpg" width="310" height="310" title="Transformation Lab" /></a>
 			<h2>Transformation Lab</h2>
 			<br/>
 			<p>Peeking into the pharmaceutical industry through hands-on biotechnology. Plus lots of neat glowing things!</p>
 			<p>See more <a href="proj/transformation_lab.html">here</a>.</p>
 		</section>
 		<section class="project">
-			<a href="proj/mineculus.html"><img src="http://cdn.quells.net/DP/proj/mineculus_sq.jpg" width="310" height="310" title="Mineculus" /></a>
+			<a href="proj/mineculus.html"><img src="http://assets.quells.net/DP/proj/mineculus_sq.jpg" width="310" height="310" title="Mineculus" /></a>
 			<h2>Mineculus</h2>
 			<br/>
 			<p>Using the wildly popular sandbox game <a href="http://www.minecraft.net" target="_blank">Minecraft</a> to help illustrate solids of revolution, a calculus topic.</p>
 			<p>See more <a href="#">here</a>.</p>
 		</section>
 		<section class="art">
-			<a href="http://cdn.quells.net/DP/proj/econ_illus.jpg"><img src="http://cdn.quells.net/DP/proj/econ_illus_sq.jpg" width="310" height="310" title="Economics Illustrated" /></a>
+			<a href="http://assets.quells.net/DP/proj/econ_illus.jpg"><img src="http://assets.quells.net/DP/proj/econ_illus_sq.jpg" width="310" height="310" title="Economics Illustrated" /></a>
 			<h2>Economics Illustrated</h2>
 			<br/>
 			<p>Don&#39;t buy lemonade from Uncle Sam! The Theory of Comparative Advantage says so. Also, <a href="proj/Do%20Not%20Buy%20American.pdf" target="_blank">a paper</a> detailing why buying American-made products is a poor long-term economic choice.</p>
 		</section>
 		<section class="art">
-			<a href="proj/chem.html"><img src="http://cdn.quells.net/DP/proj/arc_sq.jpg" width="310" height="310" title="Homemade Arc Lamp" /></a>
+			<a href="proj/chem.html"><img src="http://assets.quells.net/DP/proj/arc_sq.jpg" width="310" height="310" title="Homemade Arc Lamp" /></a>
 			<h2>Chemistry is Everywhere</h2>
 			<br/>
 			<p>Showing the ubiquity of chemistry through photography. Mixture of digital and analog, with some homemade photo emulsion paper.</p>
 			<p>See more <a href="proj/chem.html">here</a>.</p>
 		</section>
 		<section class="project">
-			<a href="proj/lightbulbs/index.html" target="_blank"><img src="http://cdn.quells.net/DP/proj/lightbulbs_sq.jpg" width="310" height="310" title="Light Bulb Website" /></a>
+			<a href="proj/lightbulbs/index.html" target="_blank"><img src="http://assets.quells.net/DP/proj/lightbulbs_sq.jpg" width="310" height="310" title="Light Bulb Website" /></a>
 			<h2>Light Bulb Comparison</h2>
 			<br/>
 			<p>Exploring energy efficiency at home in 2009.</p>
 			<p>See it <a href="proj/lightbulbs/index.html" target="_blank">here</a>.</p>
 		</section>
 		<section class="project">
-			<a href="proj/mao/index.html" target="_blank"><img src="http://cdn.quells.net/DP/proj/mao.jpg" width="310" height="310" title="Mao Zedong Timeline" /></a>
+			<a href="proj/mao/index.html" target="_blank"><img src="http://assets.quells.net/DP/proj/mao.jpg" width="310" height="310" title="Mao Zedong Timeline" /></a>
 			<h2>Mao Zedong Timeline</h2>
 			<br/>
 			<p>Exploring modern Chinese history (and alternative interface design).</p>
 			<p>See it <a href="proj/mao/index.html" target="_blank">here</a>.</p>
 		</section>
 		<section class="project">
-			<a href="http://cdn.quells.net/DP/proj/ecologic.pdf" target="_blank"><img src="http://cdn.quells.net/DP/proj/ecologic_sq.png" width="310" height="310" title="ecoLOGIC Magazine" /></a>
+			<a href="http://assets.quells.net/DP/proj/ecologic.pdf" target="_blank"><img src="http://assets.quells.net/DP/proj/ecologic_sq.png" width="310" height="310" title="ecoLOGIC Magazine" /></a>
 			<h2>ecoLOGIC Magazine</h2>
 			<br/>
 			<p>A magazine that I wrote and designed in 2008 that talks about air pollution around the world and what is being done to combat it.</p>
-			<p>See it <a href="http://cdn.quells.net/DP/proj/ecologic.pdf" target="_blank">here</a> (33mb).</p>
+			<p>See it <a href="http://assets.quells.net/DP/proj/ecologic.pdf" target="_blank">here</a> (33mb).</p>
 		</section>
 		<div class="clear"></div>
 	</div>
