--- a/pharma/about.html
+++ b/pharma/about.html
@@ -28,7 +28,7 @@
 			<h2>Our Staff:</h2>
 			<br/>
 			<section class="staffpic">
-				<img src="https://cdn.quells.net/pharma/photos/Paloma.jpg" width="200" height="200" alt="Paloma" />
+				<img src="http://assets.quells.net/pharma/photos/Paloma.jpg" width="200" height="200" alt="Paloma" />
 			</section>
 			<section class="staffinfo">
 				<br/>
@@ -40,7 +40,7 @@
 			<div class="clear"></div>
 			<br/>
 			<section class="staffpic">
-				<img src="https://cdn.quells.net/pharma/photos/Ernie.jpg" width="200" height="200" alt="Ernie" />
+				<img src="http://assets.quells.net/pharma/photos/Ernie.jpg" width="200" height="200" alt="Ernie" />
 			</section>
 			<section class="staffinfo">
 				<br/>
@@ -52,7 +52,7 @@
 			<div class="clear"></div>
 			<br/>
 			<section class="staffpic">
-				<img src="https://cdn.quells.net/pharma/photos/Kai.jpg" width="200" height="200" alt="Kai" />
+				<img src="http://assets.quells.net/pharma/photos/Kai.jpg" width="200" height="200" alt="Kai" />
 			</section>
 			<section class="staffinfo">
 				<br/>
@@ -64,7 +64,7 @@
 			<div class="clear"></div>
 			<br/>
 			<section class="staffpic">
-				<img src="https://cdn.quells.net/pharma/photos/Timo.jpg" width="200" height="200" alt="Timo" />
+				<img src="http://assets.quells.net/pharma/photos/Timo.jpg" width="200" height="200" alt="Timo" />
 			</section>
 			<section class="staffinfo">
 				<br/>
@@ -76,7 +76,7 @@
 			<div class="clear"></div>
 			<br/>
 			<section class="staffpic">
-				<img src="https://cdn.quells.net/pharma/photos/Lilia.jpg" width="200" height="200" alt="Lilia" />
+				<img src="http://assets.quells.net/pharma/photos/Lilia.jpg" width="200" height="200" alt="Lilia" />
 			</section>
 			<section class="staffinfo">
 				<br/>
@@ -88,7 +88,7 @@
 			<div class="clear"></div>
 			<br/>
 			<section class="staffpic">
-				<img src="https://cdn.quells.net/pharma/photos/Thomas.jpg" width="200" height="200" alt="Thomas" />
+				<img src="http://assets.quells.net/pharma/photos/Thomas.jpg" width="200" height="200" alt="Thomas" />
 			</section>
 			<section class="staffinfo">
 				<br/>
