--- a/pharma/index.html
+++ b/pharma/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 	<div class="sleeve">
-		<a href="home.html"><img src="https://cdn.quells.net/pharma/logo.jpg" width="600" height="600" alt="pharma-pl0x logo" /></a>
+		<a href="home.html"><img src="http://assets.quells.net/pharma/logo.jpg" width="600" height="600" alt="pharma-pl0x logo" /></a>
 		<br/>
 		<h2><a href="home.html">Enter here.</a></h2>
 		<br/>
