--- a/pharma/photos.html
+++ b/pharma/photos.html
@@ -22,36 +22,36 @@
 			<br/>
 			<p style="text-align: center;">Please note that some pictures can be enlarged by clicking on them. Comrade.</p>
 			<br/><br/>
-			<img src="https://cdn.quells.net/pharma/photos/Working_medium.jpg" width="546" height="364" alt="Our employees hard at work." />
+			<img src="http://assets.quells.net/pharma/photos/Working_medium.jpg" width="546" height="364" alt="Our employees hard at work." />
 			<br/><br/>
 			<p style="text-align: center;">At Pharma-Pl0x, we take our work seriously.</p>
 			<br/>
-			<a href="https://cdn.quells.net/pharma/photos/Intense_medium.jpg" style="float: left; margin: 20px 0 0 55px;" title="Our employees hard at work."><img src="https://cdn.quells.net/pharma/photos/Intense_small.jpg" width="189" height="283" alt="We take our work very seriously at Pharma-Pl0x." /></a>
-			<a href="https://cdn.quells.net/pharma/photos/Fists_medium.jpg" style="float: right; margin: 20px 59px 0 0;" title="We take revolution very seriously at Pharma-Pl0x."><img src="https://cdn.quells.net/pharma/photos/Fists_small.jpg" width="189" height="283" alt="We take revolution very seriously at Pharma-Pl0x." /></a>
+			<a href="http://assets.quells.net/pharma/photos/Intense_medium.jpg" style="float: left; margin: 20px 0 0 55px;" title="Our employees hard at work."><img src="http://assets.quells.net/pharma/photos/Intense_small.jpg" width="189" height="283" alt="We take our work very seriously at Pharma-Pl0x." /></a>
+			<a href="http://assets.quells.net/pharma/photos/Fists_medium.jpg" style="float: right; margin: 20px 59px 0 0;" title="We take revolution very seriously at Pharma-Pl0x."><img src="http://assets.quells.net/pharma/photos/Fists_small.jpg" width="189" height="283" alt="We take revolution very seriously at Pharma-Pl0x." /></a>
 			<div class="clear"></div>
 			<br/>
 			<p style="text-align: center;">We also take our revolutionary background <span style="text-decoration: underline;">very</span> seriously.</p>
 			<br/><br/>
-			<img src="https://cdn.quells.net/pharma/photos/Protein_Isolation_medium.jpg" width="546" height="364" alt="Protein Isolation Process." />
+			<img src="http://assets.quells.net/pharma/photos/Protein_Isolation_medium.jpg" width="546" height="364" alt="Protein Isolation Process." />
 			<br/><br/>
 			<p style="text-align: center;">Here is a part of the protein isolation process.</p>
 			<br/><br/>
-			<img src="https://cdn.quells.net/pharma/photos/GFP_medium.jpg" width="546" height="364" alt="Green Fluorescent Protein product." />
+			<img src="http://assets.quells.net/pharma/photos/GFP_medium.jpg" width="546" height="364" alt="Green Fluorescent Protein product." />
 			<br/><br/>
 			<p style="text-align: center;">Here is some of the green fluorescent protein <br/>
 				that we have manufactured and collected.<br/><br/>
 				This same process can be used to achieve our goal of attaching <br/>
 				GFP to parts of the brain to help cure various diseases.</p>
 			<br/><br/>
-			<a href="https://cdn.quells.net/pharma/photos/Apple_medium.jpg" style="" title="We at Pharma-Pl0x like partially eaten Apples."><img src="https://cdn.quells.net/pharma/photos/Apple_small.jpg" width="200" height="200" alt="We at Pharma-Pl0x like partially eaten Apples." /></a>
+			<a href="http://assets.quells.net/pharma/photos/Apple_medium.jpg" style="" title="We at Pharma-Pl0x like partially eaten Apples."><img src="http://assets.quells.net/pharma/photos/Apple_small.jpg" width="200" height="200" alt="We at Pharma-Pl0x like partially eaten Apples." /></a>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<a href="photos/Pharma-Pl0x_medium.jpg" style="" title="We take our work very seriously at Pharma-Pl0x."><img src="photos/Pharma-Pl0x_small.jpg" width="200" height="200" alt="We take our work very seriously at Pharma-Pl0x." /></a>
 			<br/><br/><br/>
-			<a href="https://cdn.quells.net/pharma/photos/JULIA_medium.jpg" style="" title="We at Pharma-Pl0x love Julia."><img src="https://cdn.quells.net/pharma/photos/JULIA_small.jpg" width="200" height="200" alt="We at Pharma-Pl0x love Julia." /></a>
+			<a href="http://assets.quells.net/pharma/photos/JULIA_medium.jpg" style="" title="We at Pharma-Pl0x love Julia."><img src="http://assets.quells.net/pharma/photos/JULIA_small.jpg" width="200" height="200" alt="We at Pharma-Pl0x love Julia." /></a>
 			<br/><br/><br/>
-			<a href="https://cdn.quells.net/pharma/photos/JEEBUS_medium.jpg" style="" title="Nobody at Pharma-Pl0x messes with The Jesus."><img src="https://cdn.quells.net/pharma/photos/JEEBUS_small.jpg" width="200" height="200" alt="Nobody at Pharma-Pl0x messes with The Jesus." /></a>
+			<a href="http://assets.quells.net/pharma/photos/JEEBUS_medium.jpg" style="" title="Nobody at Pharma-Pl0x messes with The Jesus."><img src="http://assets.quells.net/pharma/photos/JEEBUS_small.jpg" width="200" height="200" alt="Nobody at Pharma-Pl0x messes with The Jesus." /></a>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="https://cdn.quells.net/pharma/photos/Ghost_Buddha_medium.jpg" style="" title="We at Pharma-Pl0x respect Buddha and his teachings."><img src="https://cdn.quells.net/pharma/photos/Ghost_Buddha_small.jpg" width="200" height="200" alt="We at Pharma-Pl0x respect Buddha and his teachings." /></a>
+			<a href="http://assets.quells.net/pharma/photos/Ghost_Buddha_medium.jpg" style="" title="We at Pharma-Pl0x respect Buddha and his teachings."><img src="http://assets.quells.net/pharma/photos/Ghost_Buddha_small.jpg" width="200" height="200" alt="We at Pharma-Pl0x respect Buddha and his teachings." /></a>
 			<br/><br/>
 			<p style="text-align: center;">The members of Pharma-Pl0x have also made <br/>
 				some art with leftover transformed <em>E. coli</em>.<br/><br/>
