--- a/DP/proj/lightbulbs/index.html
+++ b/DP/proj/lightbulbs/index.html
@@ -16,22 +16,22 @@
 	<div id="wrap">
 		
 		<a href="index.html">
-			<img src="images/header.png" width="600px" height="150" alt="Light Bulbs" />
+			<img src="http://assets.quells.net/DP/proj/lightbulbs/images/header.png" width="600px" height="150" alt="Light Bulbs" />
 		</a>
 		
 		<div id="nav">
 			<ul class="menu">
 				<li><a href="incan.html" class="incan" title="Incandescent">
-					<img src="images/incan-icon.png" width="150" height="75" alt="Incandescent" />
+					<img src="http://assets.quells.net/DP/proj/lightbulbs/images/incan-icon.png" width="150" height="75" alt="Incandescent" />
 				</a></li>
 				<li><a href="cfl.html" class="cfl" title="Compact Fluorescent">
-					<img src="images/cfl-icon.png" width="150" height="75" alt="Compact Fluorescent" />
+					<img src="http://assets.quells.net/DP/proj/lightbulbs/images/cfl-icon.png" width="150" height="75" alt="Compact Fluorescent" />
 				</a></li>
 				<li><a href="led.html" class="led" title="LED">
-					<img src="images/led-icon.png" width="150" height="75" alt="LED" />
+					<img src="http://assets.quells.net/DP/proj/lightbulbs/images/led-icon.png" width="150" height="75" alt="LED" />
 				</a></li>
 				<li><a href="halo.html" class="halo" title="Halogen">
-					<img src="images/halo-icon.png" width="150" height="75" alt="Halogen" />
+					<img src="http://assets.quells.net/DP/proj/lightbulbs/images/halo-icon.png" width="150" height="75" alt="Halogen" />
 				</a></li>
 			</ul>
 		</div>		<!-- END nav -->
@@ -49,7 +49,7 @@
 			
 			<h2>What kind of light bulb should I use?</h2>
 			
-			<img src="images/graph.png" width="550" height="374" />
+			<img src="http://assets.quells.net/DP/proj/lightbulbs/images/graph.png" width="550" height="374" />
 			
 			<p>In 20 years, there is a huge cost benefit in purchasing the energy efficient light bulbs rather than the regular light bulbs. By buying the energy efficient model, the cost benefit is shown almost immediately. Although at first, it may seem that the energy efficient model may be a bit pricey, the energy efficient model lasts very long and a huge cost benefit compared to the regular light bulbs. If you were to buy the normal type of light bulb, you would have to replace it very often and the prices would accumulate, whereas the energy efficient light bulb would be a bit pricy at first, but in the end it would be worth it.</p>
 			
