--- a/DP/proj/lightbulbs/cfl.html
+++ b/DP/proj/lightbulbs/cfl.html
@@ -16,22 +16,22 @@
 	<div id="wrap">
 		
 		<a href="index.html">
-			<img src="images/header.png" width="600px" height="150" alt="Light Bulbs" />
+			<img src="http://assets.quells.net/DP/proj/lightbulbs/images/header.png" width="600px" height="150" alt="Light Bulbs" />
 		</a>
 		
 		<div id="nav">
 			<ul class="menu">
 				<li><a href="incan.html" class="incan" title="Incandescent">
-					<img src="images/incan-icon.png" width="150" height="75" alt="Incandescent" />
+					<img src="http://assets.quells.net/DP/proj/lightbulbs/images/incan-icon.png" width="150" height="75" alt="Incandescent" />
 				</a></li>
 				<li><a href="cfl.html" class="cfl" title="Compact Fluorescent">
-					<img src="images/cfl-icon.png" width="150" height="75" alt="Compact Fluorescent" />
+					<img src="http://assets.quells.net/DP/proj/lightbulbs/images/cfl-icon.png" width="150" height="75" alt="Compact Fluorescent" />
 				</a></li>
 				<li><a href="led.html" class="led" title="LED">
-					<img src="images/led-icon.png" width="150" height="75" alt="LED" />
+					<img src="http://assets.quells.net/DP/proj/lightbulbs/images/led-icon.png" width="150" height="75" alt="LED" />
 				</a></li>
 				<li><a href="halo.html" class="halo" title="Halogen">
-					<img src="images/halo-icon.png" width="150" height="75" alt="Halogen" />
+					<img src="http://assets.quells.net/DP/proj/lightbulbs/images/halo-icon.png" width="150" height="75" alt="Halogen" />
 				</a></li>
 			</ul>
 		</div>		<!-- END nav -->
@@ -40,7 +40,7 @@
 			
 			<h2>How do Compact Fluorescent Bulbs Work?</h2>
 			
-			<div class="floatright"><img src="images/cfl.png" width="200" height="200" alt="Compact Fluorescent" /></div>
+			<div class="floatright"><img src="http://assets.quells.net/DP/proj/lightbulbs/images/cfl.png" width="200" height="200" alt="Compact Fluorescent" /></div>
 			
 			<p>In a compact fluorescent light bulb, electricity is run through mercury vapor, which excites its atoms. This in turn excites the atoms of a phosphorous gas, causing its electrons to reach higher energy orbits. As the gas cools down, the atoms become less excited and the electrons try to go back to their normal orbits. This requires giving off energy, however, which is done in the form of emitting photons – light. This all happens in an instant and is multiplied by the billions of atoms in the gas, which produces the bright light that we see.</p>
 			<br>
