--- a/DP/proj/lightbulbs/led.html
+++ b/DP/proj/lightbulbs/led.html
@@ -16,22 +16,22 @@
 	<div id="wrap">
 		
 		<a href="index.html">
-			<img src="images/header.png" width="600px" height="150" alt="Light Bulbs" />
+			<img src="http://assets.quells.net/DP/proj/lightbulbs/images/header.png" width="600px" height="150" alt="Light Bulbs" />
 		</a>
 		
 		<div id="nav">
 			<ul class="menu">
 				<li><a href="incan.html" class="incan" title="Incandescent">
-					<img src="images/incan-icon.png" width="150" height="75" alt="Incandescent" />
+					<img src="http://assets.quells.net/DP/proj/lightbulbs/images/incan-icon.png" width="150" height="75" alt="Incandescent" />
 				</a></li>
 				<li><a href="cfl.html" class="cfl" title="Compact Fluorescent">
-					<img src="images/cfl-icon.png" width="150" height="75" alt="Compact Fluorescent" />
+					<img src="http://assets.quells.net/DP/proj/lightbulbs/images/cfl-icon.png" width="150" height="75" alt="Compact Fluorescent" />
 				</a></li>
 				<li><a href="led.html" class="led" title="LED">
-					<img src="images/led-icon.png" width="150" height="75" alt="LED" />
+					<img src="http://assets.quells.net/DP/proj/lightbulbs/images/led-icon.png" width="150" height="75" alt="LED" />
 				</a></li>
 				<li><a href="halo.html" class="halo" title="Halogen">
-					<img src="images/halo-icon.png" width="150" height="75" alt="Halogen" />
+					<img src="http://assets.quells.net/DP/proj/lightbulbs/images/halo-icon.png" width="150" height="75" alt="Halogen" />
 				</a></li>
 			</ul>
 		</div>		<!-- END nav -->
@@ -40,7 +40,7 @@
 			
 			<h2>How do Light Emitting Diodes Work?</h2>
 			
-			<div class="floatright"><img src="images/led.png" width="200" height="200" alt="LED" /></div>
+			<div class="floatright"><img src="http://assets.quells.net/DP/proj/lightbulbs/images/led.png" width="200" height="200" alt="LED" /></div>
 			
 			<p>In an LED, or ‘light emitting diode,’ electricity is run through a semiconductor that has holes in it. When electrons run through the semiconductor and hit a hole, they lose energy and emit a photon – light. Because there are no moving parts, LED’s tend to have extremely long life spans, generally tens of thousands of hours – usually at least twenty times longer than incandescent bulbs. However, LED’s are very tiny, so many of them must be used to generate the same amount of light as a normal bulb. This is counteracted, though, by their very low energy requirements – for eighteen, less than a watt per hour.</p><br><br>
 			
