--- a/pharma/photos.html
+++ b/pharma/photos.html
@@ -45,7 +45,7 @@
 			<br/><br/>
 			<a href="http://assets.quells.net/pharma/photos/Apple_medium.jpg" style="" title="We at Pharma-Pl0x like partially eaten Apples."><img src="http://assets.quells.net/pharma/photos/Apple_small.jpg" width="200" height="200" alt="We at Pharma-Pl0x like partially eaten Apples." /></a>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="http://assets.quells.net/pharma/photos/Pharma-Pl0x_medium.jpg" style="" title="We take our work very seriously at Pharma-Pl0x."><img src="photos/Pharma-Pl0x_small.jpg" width="200" height="200" alt="We take our work very seriously at Pharma-Pl0x." /></a>
+			<a href="http://assets.quells.net/pharma/photos/Pharma-Pl0x_medium.jpg" style="" title="We take our work very seriously at Pharma-Pl0x."><img src="http://assets.quells.net/pharma/photos/Pharma-Pl0x_small.jpg" width="200" height="200" alt="We take our work very seriously at Pharma-Pl0x." /></a>
 			<br/><br/><br/>
 			<a href="http://assets.quells.net/pharma/photos/JULIA_medium.jpg" style="" title="We at Pharma-Pl0x love Julia."><img src="http://assets.quells.net/pharma/photos/JULIA_small.jpg" width="200" height="200" alt="We at Pharma-Pl0x love Julia." /></a>
 			<br/><br/><br/>
